reversing readAsString and writeAsString due to compiler errors