@@ -7,6 +7,7 @@ import org.atsign.common.AtSign;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -46,7 +47,7 @@ public class KeysUtil {
         encryptedKeys.put(encryptionPrivateKeyName, EncryptionUtil.aesEncryptToBase64(keys.get(encryptionPrivateKeyName), selfEncryptionKey));
 
         String json = mapper.writerWithDefaultPrettyPrinter().writeValueAsString(encryptedKeys);
-        Files.writeString(file.toPath(), json);
+        Files.write(file.toPath(), json.getBytes(StandardCharsets.UTF_8));
     }
 
     private static File getKeysFile(AtSign atSign) {
@@ -60,7 +61,7 @@ public class KeysUtil {
             throw new AtException("loadKeys: No file at " + file.getAbsolutePath());
         }
 
-        String json = Files.readString(file.toPath());
+        String json = new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
         @SuppressWarnings("unchecked") Map<String, String> encryptedKeys = mapper.readValue(json, Map.class);
 
         // All the keys are encrypted with the AES self encryption key (which is left unencrypted)
